# NekoIDE

./: CMakeLists.txt  Makefile  NekoIDE  NekoIDE.pro  main.cpp  neko.c  readme.md
